@@ -10,9 +10,10 @@
 	- Added translucence option for dashboard line charts
 	- Configurable display format for dashboard elements data sources
 	- Improved inverted line chart support
+	- DCI filter in DCI selection dialog
 - Android console
 	- Reorganized alarm notification section (issue #1194)
-- Fixed issues: #859, #1194, #1197, #1200
+- Fixed issues: #859, #1194, #1195, #1197, #1200
 
 
 *
